Document need for additional PermGen in build
CLM-987