@@ -5,6 +5,15 @@
     "Sonatype" is a trademark of Sonatype, Inc.
 
 -->
+
 Insight Brain
 =============
 
+The on-premises server that customers run to evaluate policy against applications and review the results.
+
+Building
+========
+
+Standard Maven build.
+
+Additional PermGen needs to be allocated to avoid a failing build during compilation.  `MAVEN_OPTS="-XX:MaxPermSize=128M"` has been successfully used.
